force-app/main/default/objects/POL_Buyer__c/POL_Buyer__c.object-meta.xml
<CustomObject>
    <label>Buyer</label>
    <nameField>
        <displayFormat>BYR-{00000000}</displayFormat>
        <label>Buyer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>