force-app/main/default/objects/POL_Buyer__c/fields/AmountAsked__c.field-meta.xml
<CustomField>
    <fullName>AmountAsked__c</fullName>
    <label>Amount asked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>