force-app/main/default/objects/POL_Buyer__c/fields/AmtAgreed__c.field-meta.xml
<CustomField>
    <fullName>AmtAgreed__c</fullName>
    <label>Amount agreed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>