force-app/main/default/objects/POL_Buyer__c/fields/AmtAgreedOld__c.field-meta.xml
<CustomField>
    <fullName>AmtAgreedOld__c</fullName>
    <description>update 전 데이터 기록용 필드</description>
    <label>Amount agreed (Old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>