force-app/main/default/objects/POL_Buyer__c/fields/BuyerNo__c.field-meta.xml
<CustomField>
    <fullName>BuyerNo__c</fullName>
    <label>Buyer No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>