force-app/main/default/objects/POL_Buyer__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>