force-app/main/default/objects/POL_Buyer__c/fields/ContractNo__c.field-meta.xml
<CustomField>
    <fullName>ContractNo__c</fullName>
    <label>Contract number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>