force-app/main/default/objects/POL_Buyer__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>