force-app/main/default/objects/POL_Buyer__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>