force-app/main/default/objects/POL_Buyer__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>Country name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>