force-app/main/default/objects/POL_Buyer__c/fields/CurrAmtAgreed__c.field-meta.xml
<CustomField>
    <fullName>CurrAmtAgreed__c</fullName>
    <label>Currency amount agreed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>