force-app/main/default/objects/POL_Buyer__c/fields/CurrAmtAgreedOld__c.field-meta.xml
<CustomField>
    <fullName>CurrAmtAgreedOld__c</fullName>
    <description>update 전 데이터 기록용 필드</description>
    <label>Currency amount agreed (Old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>