force-app/main/default/objects/POL_Buyer__c/fields/CurrencyAmtAsked__c.field-meta.xml
<CustomField>
    <fullName>CurrencyAmtAsked__c</fullName>
    <label>Currency amount asked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>