force-app/main/default/objects/POL_Buyer__c/fields/CustDebtorRef__c.field-meta.xml
<CustomField>
    <fullName>CustDebtorRef__c</fullName>
    <label>Customer&apos;s debtor reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>