force-app/main/default/objects/POL_Buyer__c/fields/CustRef__c.field-meta.xml
<CustomField>
    <fullName>CustRef__c</fullName>
    <label>Customer reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>