force-app/main/default/objects/POL_Buyer__c/fields/Decision1__c.field-meta.xml
<CustomField>
    <fullName>Decision1__c</fullName>
    <label>Decision 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>