force-app/main/default/objects/POL_Buyer__c/fields/Decision2__c.field-meta.xml
<CustomField>
    <fullName>Decision2__c</fullName>
    <label>Decision 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>