force-app/main/default/objects/POL_Buyer__c/fields/Decision3__c.field-meta.xml
<CustomField>
    <fullName>Decision3__c</fullName>
    <label>Decision 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>