force-app/main/default/objects/POL_Buyer__c/fields/DecisionComment__c.field-meta.xml
<CustomField>
    <fullName>DecisionComment__c</fullName>
    <label>Decision comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>