force-app/main/default/objects/POL_Buyer__c/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <label>Decision date</label>
    <type>Date</type>
</CustomField>