force-app/main/default/objects/POL_Buyer__c/fields/DecisionStatus__c.field-meta.xml
<CustomField>
    <fullName>DecisionStatus__c</fullName>
    <label>Decision status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>