force-app/main/default/objects/POL_Buyer__c/fields/DecisionType__c.field-meta.xml
<CustomField>
    <fullName>DecisionType__c</fullName>
    <label>Decision type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>