force-app/main/default/objects/POL_Buyer__c/fields/DRA__c.field-meta.xml
<CustomField>
    <fullName>DRA__c</fullName>
    <label>DRA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>