force-app/main/default/objects/POL_Buyer__c/fields/EasyNo__c.field-meta.xml
<CustomField>
    <fullName>EasyNo__c</fullName>
    <label>EASY No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>