force-app/main/default/objects/POL_Buyer__c/fields/EffectDate__c.field-meta.xml
<CustomField>
    <fullName>EffectDate__c</fullName>
    <label>Effect date</label>
    <type>Date</type>
</CustomField>