force-app/main/default/objects/POL_Buyer__c/fields/EffectDateOld__c.field-meta.xml
<CustomField>
    <fullName>EffectDateOld__c</fullName>
    <description>update 전 데이터 기록용 필드</description>
    <label>Effect date (Old)</label>
    <type>Date</type>
</CustomField>