force-app/main/default/objects/POL_Buyer__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End date</label>
    <type>Date</type>
</CustomField>