force-app/main/default/objects/POL_Buyer__c/fields/EndDateOld__c.field-meta.xml
<CustomField>
    <fullName>EndDateOld__c</fullName>
    <description>update 전 데이터 기록용 필드</description>
    <label>End date (Old)</label>
    <type>Date</type>
</CustomField>