force-app/main/default/objects/POL_Buyer__c/fields/FavoriteCompany__c.field-meta.xml
<CustomField>
    <fullName>FavoriteCompany__c</fullName>
    <label>Favorite company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>