force-app/main/default/objects/POL_Buyer__c/fields/GrntProvied1__c.field-meta.xml
<CustomField>
    <fullName>GrntProvied1__c</fullName>
    <label>Guarantors provided 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>