force-app/main/default/objects/POL_Buyer__c/fields/GrntProvied2__c.field-meta.xml
<CustomField>
    <fullName>GrntProvied2__c</fullName>
    <label>Guarantors provided 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>