force-app/main/default/objects/POL_Buyer__c/fields/GrntProvied3__c.field-meta.xml
<CustomField>
    <fullName>GrntProvied3__c</fullName>
    <label>Guarantors provided 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>