force-app/main/default/objects/POL_Buyer__c/fields/GrntReq1__c.field-meta.xml
<CustomField>
    <fullName>GrntReq1__c</fullName>
    <label>Guarantors required 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>