force-app/main/default/objects/POL_Buyer__c/fields/GrntReq2__c.field-meta.xml
<CustomField>
    <fullName>GrntReq2__c</fullName>
    <label>Guarantors required 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>