force-app/main/default/objects/POL_Buyer__c/fields/GrntReq3__c.field-meta.xml
<CustomField>
    <fullName>GrntReq3__c</fullName>
    <label>Guarantors required 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>