force-app/main/default/objects/POL_Buyer__c/fields/InsuredPct__c.field-meta.xml
<CustomField>
    <fullName>InsuredPct__c</fullName>
    <label>Insured percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>