force-app/main/default/objects/POL_Buyer__c/fields/InternalCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>InternalCreditLimit__c</fullName>
    <label>Internal credit limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>