force-app/main/default/objects/POL_Buyer__c/fields/InternatinoalBizName__c.field-meta.xml
<CustomField>
    <fullName>InternatinoalBizName__c</fullName>
    <label>International Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>