force-app/main/default/objects/POL_Buyer__c/fields/LeagalIdentType1__c.field-meta.xml
<CustomField>
    <fullName>LeagalIdentType1__c</fullName>
    <label>Legal identifier type 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>