force-app/main/default/objects/POL_Buyer__c/fields/LeagalIdentType2__c.field-meta.xml
<CustomField>
    <fullName>LeagalIdentType2__c</fullName>
    <label>Legal identifier type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>