force-app/main/default/objects/POL_Buyer__c/fields/LeagalIdentType3__c.field-meta.xml
<CustomField>
    <fullName>LeagalIdentType3__c</fullName>
    <label>Legal identifier type 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>