force-app/main/default/objects/POL_Buyer__c/fields/LegalIdentValue1__c.field-meta.xml
<CustomField>
    <fullName>LegalIdentValue1__c</fullName>
    <label>Legal identifier value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>