force-app/main/default/objects/POL_Buyer__c/fields/LegalIdentValue2__c.field-meta.xml
<CustomField>
    <fullName>LegalIdentValue2__c</fullName>
    <label>Legal identifier value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>