force-app/main/default/objects/POL_Buyer__c/fields/LegalIdentValue3__c.field-meta.xml
<CustomField>
    <fullName>LegalIdentValue3__c</fullName>
    <label>Legal identifier value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>