force-app/main/default/objects/POL_Buyer__c/fields/MinShipAmt__c.field-meta.xml
<CustomField>
    <fullName>MinShipAmt__c</fullName>
    <label>Minimum shipment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>