force-app/main/default/objects/POL_Buyer__c/fields/MinShipAmtOld__c.field-meta.xml
<CustomField>
    <fullName>MinShipAmtOld__c</fullName>
    <label>Minimum shipment amount (Old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>