force-app/main/default/objects/POL_Buyer__c/fields/MinShpCurr__c.field-meta.xml
<CustomField>
    <fullName>MinShpCurr__c</fullName>
    <label>Minimum shipment currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>