force-app/main/default/objects/POL_Buyer__c/fields/MinShpCurrOld__c.field-meta.xml
<CustomField>
    <fullName>MinShpCurrOld__c</fullName>
    <description>update 전 데이터 기록용 필드</description>
    <label>Minimum shipment currency (Old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>