force-app/main/default/objects/POL_Buyer__c/fields/ModeOfPay__c.field-meta.xml
<CustomField>
    <fullName>ModeOfPay__c</fullName>
    <label>Mode of payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>