force-app/main/default/objects/POL_Buyer__c/fields/NA__c.field-meta.xml
<CustomField>
    <fullName>NA__c</fullName>
    <label>N/A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>