force-app/main/default/objects/POL_Buyer__c/fields/OperationLabel__c.field-meta.xml
<CustomField>
    <fullName>OperationLabel__c</fullName>
    <label>Operation label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>