force-app/main/default/objects/POL_Buyer__c/fields/OperationNo__c.field-meta.xml
<CustomField>
    <fullName>OperationNo__c</fullName>
    <label>Operation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>