force-app/main/default/objects/POL_Buyer__c/fields/OutstandingAmt__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmt__c</fullName>
    <label>Outstanding amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>