force-app/main/default/objects/POL_Buyer__c/fields/Policy_lk__c.field-meta.xml
<CustomField>
    <fullName>Policy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Buyer</relationshipLabel>
    <relationshipName>Buyer</relationshipName>
    <type>Lookup</type>
</CustomField>