force-app/main/default/objects/POL_Buyer__c/fields/PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder__c</fullName>
    <label>Policyholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>