force-app/main/default/objects/POL_Buyer__c/fields/RatingNotation__c.field-meta.xml
<CustomField>
    <fullName>RatingNotation__c</fullName>
    <label>@rating notation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>