force-app/main/default/objects/POL_Buyer__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>Request date</label>
    <type>Date</type>
</CustomField>