force-app/main/default/objects/POL_Buyer__c/fields/RequestDateOld__c.field-meta.xml
<CustomField>
    <fullName>RequestDateOld__c</fullName>
    <description>update 이전 데이터 기록용 필드</description>
    <label>Request date (Old)</label>
    <type>Date</type>
</CustomField>