force-app/main/default/objects/POL_Buyer__c/fields/StateCountry__c.field-meta.xml
<CustomField>
    <fullName>StateCountry__c</fullName>
    <label>State/County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>