force-app/main/default/objects/POL_Buyer__c/fields/TermsOfPayment__c.field-meta.xml
<CustomField>
    <fullName>TermsOfPayment__c</fullName>
    <label>Terms of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>