force-app/main/default/objects/POL_Buyer__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>